# nexus-x-omega-studio

./: .gitignore  AUDIO_POLISH_PITCH.md  DEPLOYMENT_STATUS.md  ESKALATION_PITCH.md  NEXT_LEVEL_ROADMAP.md  NEXT_LEVEL_SUMMARY.md  README.md  claude_progress.md  index.html  main.js  nexus-dsp.cpp  package.json  processor.js  style.css  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/agents/: audio-engineer.md
public/: nexus-dsp.js  nexus-dsp.wasm  polyfills.js  processor.js
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  mixer.rs
src/ai/: index.ts
src/ai-engine/: AIComposer.ts  AIMasteringEngine.ts  NeuralDream.ts  RandomizationEngine.ts  VelocityPatternGenerator.ts  index.ts
src/audio/: AudioEngine.ts  SamplePad.ts  index.ts
src/config/: constants.ts  genres.ts  index.ts
src/core/: AIMastering.ts  AIProgressDialog.ts  AppStore.ts  ArpeggiatorPro.ts  AutoArranger.ts  BasslineGenerator.ts  ChordGenerator.ts  EffectRack.ts  ErrorHandler.ts  GroovePool.ts  LoopStation.ts  MIDILearn.ts  NeuralDream.ts  NoteRepeat.ts  PatternLocker.ts  PatternMorpher.ts  PatternVariations.ts  PerformanceRecorder.ts  Quantizer.ts  QuantumSnapshots.ts  RandomizationEngine.ts  SamplePad.ts  ScaleLock.ts  SidechainCompressor.ts  SpectralFreeze.ts  SpectralWorkbench.ts  StemExporter.ts  UndoRedoManager.ts  storeBridge.ts  tauriBridge.ts
src/css/: responsive.css
src/music-theory/: ChordGenerator.ts  (+3 more)
wasm/: INSTALL.md  Makefile  build.sh  setup-emscripten.bat
(+54 files in other folders)
