[package]
name = "nexus-x"
version = "4.0.0"
edition = "2021"
description = "NEXUS-X Omega Studio - Professional DAW"
authors = ["NEXUS-X Team"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
crossbeam-channel = "0.5"
parking_lot = "0.12"
ringbuf = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
